--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "OptionalEx",
+            "request": "launch",
+            "mainClass": "stream.OptionalEx",
+            "projectName": "javasource_a7040f79"
+        },
+        {
+            "type": "java",
             "name": "FileEx2",
             "request": "launch",
             "mainClass": "io.FileEx2",
